<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/Day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Day"
        android:textColor="@color/black"
        android:textSize="@dimen/txtsize_18"
        android:layout_margin="@dimen/distance_10" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/temperature"
        android:textColor="@color/black"
        android:textSize="@dimen/txtsize_18"
        android:layout_margin="@dimen/distance_10"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@mipmap/sun" />

    <TextView
        android:id="@+id/weather_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/weather_status"
        android:textColor="@color/black"
        android:textSize="@dimen/txtsize_18"
        android:layout_margin="@dimen/distance_10"/>

</LinearLayout>