<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/WeatherTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WeatherTitle"
        android:layout_margin="@dimen/distance_10"
        android:textColor="@color/white"
        android:textSize="@dimen/txtsize_32"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/City"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/City"
        android:textColor="@color/white"
        android:textSize="@dimen/txtsize_24"
        app:layout_constraintTop_toBottomOf="@+id/WeatherTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textColor="@color/white"
        android:textSize="@dimen/txtsize_36"
        app:layout_constraintTop_toBottomOf="@+id/City"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/temperature_higtAndlow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textColor="@color/white"
        android:textSize="@dimen/txtsize_32"
        app:layout_constraintTop_toBottomOf="@+id/temperature"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/air_quality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/air_quality"
        android:textColor="@color/white"
        android:textSize="@dimen/txtsize_32"
        app:layout_constraintTop_toBottomOf="@+id/temperature_higtAndlow"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_everytime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/air_quality"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_everyday"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_everytime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
